--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
     "name": "ghayas/package-pro",
-    "type": "project",
+    "type": "library",
     "description": "The skeleton application for the Laravel framework.",
     "keywords": [
         "laravel",
